fix player alignement

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,9 +91,9 @@ main {
 	margin-left: 16px;
 }
 
-#player-container {
-	flex-grow:0;
-	flex-shrink: 0;
+.clear {
+	clear: both;
+	height: 60px;
 }
 
 #player {
@@ -103,7 +103,6 @@ main {
 	height: 80px;
 	width: 100%;
 	position: fixed;
-	overflow-y: hidden; /* Prevents 1-pixel offset that happens with sticky */
 	z-index: 2;
 	bottom: 0;
 	left: 0;
@@ -134,11 +133,17 @@ main {
 	justify-content: center;
 }
 
-#player #controls img {
+#controls {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#controls img {
 	height: 40px;
 	width: 40px;
-	margin-left: 32px;
-	margin-right: 32px;
+	margin-left: 16px;
+	margin-right: 16px;
 }
 
 #poweredBy img {
